added dependencies, fixed compile error